--- a/AI-Experiments/AI-Experiments.vcxproj
+++ b/AI-Experiments/AI-Experiments.vcxproj
@@ -194,6 +194,9 @@ xcopy /q /Y /s "$(ProjectDir)resources" "$(OutDir)resources\"</Command>
     <ClCompile Include="poly2tri\sweep\sweep_context.cc" />
     <ClCompile Include="source\AiApplication.cpp" />
     <ClCompile Include="source\Debugging\ImGuiAdapter.cpp" />
+    <ClCompile Include="source\Global.cpp" />
+    <ClCompile Include="source\Physics\Collision.cpp" />
+    <ClCompile Include="source\Physics\Shapes\Line.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="imgui\imgui.h" />
@@ -213,6 +216,9 @@ xcopy /q /Y /s "$(ProjectDir)resources" "$(OutDir)resources\"</Command>
     <ClInclude Include="poly2tri\sweep\sweep_context.h" />
     <ClInclude Include="source\AiApplication.h" />
     <ClInclude Include="source\Debugging\ImGuiAdapter.h" />
+    <ClInclude Include="source\Global.h" />
+    <ClInclude Include="source\Physics\Collision.h" />
+    <ClInclude Include="source\Physics\Shapes\Line.h" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="resources\textures\characters.png" />
