--- a/AI-Experiments/AI-Experiments.vcxproj
+++ b/AI-Experiments/AI-Experiments.vcxproj
@@ -193,6 +193,8 @@ xcopy /q /Y /s "$(ProjectDir)resources" "$(OutDir)resources\"</Command>
     <ClCompile Include="poly2tri\sweep\sweep.cc" />
     <ClCompile Include="poly2tri\sweep\sweep_context.cc" />
     <ClCompile Include="source\AiApplication.cpp" />
+    <ClCompile Include="source\Debugging\Debugger.cpp" />
+    <ClCompile Include="source\Debugging\IDebugHandler.cpp" />
     <ClCompile Include="source\Debugging\ImGuiAdapter.cpp" />
     <ClCompile Include="source\Global.cpp" />
     <ClCompile Include="source\Physics\Collision.cpp" />
@@ -217,12 +219,16 @@ xcopy /q /Y /s "$(ProjectDir)resources" "$(OutDir)resources\"</Command>
     <ClInclude Include="poly2tri\sweep\sweep.h" />
     <ClInclude Include="poly2tri\sweep\sweep_context.h" />
     <ClInclude Include="source\AiApplication.h" />
+    <ClInclude Include="source\Debugging\Debugger.h" />
+    <ClInclude Include="source\Debugging\IDebugHandler.h" />
     <ClInclude Include="source\Debugging\ImGuiAdapter.h" />
     <ClInclude Include="source\Global.h" />
     <ClInclude Include="source\Physics\Collision.h" />
     <ClInclude Include="source\Physics\Shapes\Circle.h" />
     <ClInclude Include="source\Physics\Shapes\Line.h" />
     <ClInclude Include="source\Physics\Shapes\Triangle.h" />
+    <ClInclude Include="source\Structures\MultiValueStruct.h" />
+    <ClInclude Include="source\Structures\PriorityHeap.h" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="resources\textures\characters.png" />
