--- a/AI-Experiments/imgui.ini
+++ b/AI-Experiments/imgui.ini
@@ -10,7 +10,8 @@ Size=550,680
 Collapsed=0
 
 [Window][Debugger]
-Pos=58,57
+ViewportPos=2399,189
+ViewportId=0x289D2C3F
 Size=429,404
 Collapsed=0
 
