--- a/AI-Experiments/AI-Experiments.vcxproj
+++ b/AI-Experiments/AI-Experiments.vcxproj
@@ -193,6 +193,7 @@ xcopy /q /Y /s "$(ProjectDir)resources" "$(OutDir)resources\"</Command>
     <ClCompile Include="poly2tri\sweep\sweep.cc" />
     <ClCompile Include="poly2tri\sweep\sweep_context.cc" />
     <ClCompile Include="source\AiApplication.cpp" />
+    <ClCompile Include="source\AI\Pathfinding\Algorithms\AStar.cpp" />
     <ClCompile Include="source\AI\Pathfinding\Edge.cpp" />
     <ClCompile Include="source\AI\Pathfinding\INavigatable.cpp" />
     <ClCompile Include="source\AI\Pathfinding\NavMesh\HullGenerator.cpp" />
@@ -226,6 +227,7 @@ xcopy /q /Y /s "$(ProjectDir)resources" "$(OutDir)resources\"</Command>
     <ClInclude Include="poly2tri\sweep\sweep.h" />
     <ClInclude Include="poly2tri\sweep\sweep_context.h" />
     <ClInclude Include="source\AiApplication.h" />
+    <ClInclude Include="source\AI\Pathfinding\Algorithms\AStar.h" />
     <ClInclude Include="source\AI\Pathfinding\Edge.h" />
     <ClInclude Include="source\AI\Pathfinding\INavigatable.h" />
     <ClInclude Include="source\AI\Pathfinding\NavMesh\HullGenerator.h" />
