--- a/AI-Experiments/AI-Experiments.vcxproj
+++ b/AI-Experiments/AI-Experiments.vcxproj
@@ -192,6 +192,8 @@ xcopy /q /Y /s "$(ProjectDir)resources" "$(OutDir)resources\"</Command>
     <ClCompile Include="poly2tri\sweep\cdt.cc" />
     <ClCompile Include="poly2tri\sweep\sweep.cc" />
     <ClCompile Include="poly2tri\sweep\sweep_context.cc" />
+    <ClCompile Include="source\Actors\Actor.cpp" />
+    <ClCompile Include="source\Actors\ActorManager.cpp" />
     <ClCompile Include="source\AiApplication.cpp" />
     <ClCompile Include="source\AI\Pathfinding\Algorithms\AStar.cpp" />
     <ClCompile Include="source\AI\Pathfinding\Edge.cpp" />
@@ -226,6 +228,8 @@ xcopy /q /Y /s "$(ProjectDir)resources" "$(OutDir)resources\"</Command>
     <ClInclude Include="poly2tri\sweep\cdt.h" />
     <ClInclude Include="poly2tri\sweep\sweep.h" />
     <ClInclude Include="poly2tri\sweep\sweep_context.h" />
+    <ClInclude Include="source\Actors\Actor.h" />
+    <ClInclude Include="source\Actors\ActorManager.h" />
     <ClInclude Include="source\AiApplication.h" />
     <ClInclude Include="source\AI\Pathfinding\Algorithms\AStar.h" />
     <ClInclude Include="source\AI\Pathfinding\Edge.h" />
