--- a/AI-Experiments/AI-Experiments.vcxproj
+++ b/AI-Experiments/AI-Experiments.vcxproj
@@ -208,6 +208,8 @@ xcopy /q /Y /s "$(ProjectDir)resources" "$(OutDir)resources\"</Command>
     <ClCompile Include="source\Debugging\IDebugHandler.cpp" />
     <ClCompile Include="source\Debugging\ImGuiAdapter.cpp" />
     <ClCompile Include="source\Global.cpp" />
+    <ClCompile Include="source\Levels\Level.cpp" />
+    <ClCompile Include="source\Levels\LevelManager.cpp" />
     <ClCompile Include="source\Physics\Collision.cpp" />
     <ClCompile Include="source\Physics\Shapes\Circle.cpp" />
     <ClCompile Include="source\Physics\Shapes\Line.cpp" />
@@ -245,6 +247,8 @@ xcopy /q /Y /s "$(ProjectDir)resources" "$(OutDir)resources\"</Command>
     <ClInclude Include="source\Debugging\IDebugHandler.h" />
     <ClInclude Include="source\Debugging\ImGuiAdapter.h" />
     <ClInclude Include="source\Global.h" />
+    <ClInclude Include="source\Levels\Level.h" />
+    <ClInclude Include="source\Levels\LevelManager.h" />
     <ClInclude Include="source\Physics\Collision.h" />
     <ClInclude Include="source\Physics\Shapes\Circle.h" />
     <ClInclude Include="source\Physics\Shapes\Line.h" />
