--- a/AI-Experiments/AI-Experiments.vcxproj
+++ b/AI-Experiments/AI-Experiments.vcxproj
@@ -210,6 +210,7 @@ xcopy /q /Y /s "$(ProjectDir)resources" "$(OutDir)resources\"</Command>
     <ClCompile Include="source\Global.cpp" />
     <ClCompile Include="source\Levels\Level.cpp" />
     <ClCompile Include="source\Levels\LevelManager.cpp" />
+    <ClCompile Include="source\Levels\MainLevel.cpp" />
     <ClCompile Include="source\Physics\Collision.cpp" />
     <ClCompile Include="source\Physics\Shapes\Circle.cpp" />
     <ClCompile Include="source\Physics\Shapes\Line.cpp" />
@@ -249,6 +250,7 @@ xcopy /q /Y /s "$(ProjectDir)resources" "$(OutDir)resources\"</Command>
     <ClInclude Include="source\Global.h" />
     <ClInclude Include="source\Levels\Level.h" />
     <ClInclude Include="source\Levels\LevelManager.h" />
+    <ClInclude Include="source\Levels\MainLevel.h" />
     <ClInclude Include="source\Physics\Collision.h" />
     <ClInclude Include="source\Physics\Shapes\Circle.h" />
     <ClInclude Include="source\Physics\Shapes\Line.h" />
